Fixing operationId and required params
